--- a/package.json
+++ b/package.json
@@ -9,37 +9,40 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "seed": "tsx app/actions/seedActions.ts"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
-    "@hookform/resolvers": "^4.1.3",
-    "@nextui-org/react": "^2.4.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/react": "^2.2.10",
     "@tanstack-query-firebase/react": "^1.0.5",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "^5.40.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
-    "firebase": "^11.7.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
     "genkit": "^1.8.0",
-    "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "lucide-react": "^0.395.0",
+    "next": "14.2.3",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.1",
-    "zod": "^3.24.2"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
