--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,48 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# vercel
-.vercel
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
+# API keys and secrets
+.env.local
 .env.production
 
-# firebase
-firebase-debug.log
-firestore-debug.log
+# Output
+dist
+build
+coverage
+
+# IDE files
+.idea/
+.vscode/*
+!.vscode/settings.json
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Bun
+.bun/
+bun.lockb
+
+# PNPM
+pnpm-lock.yaml
+.pnpm-store/
+
+# Git specific (if any, like .gitattributes if managed by user)
+.gitattributes
