--- a/package.json
+++ b/package.json
@@ -9,44 +9,43 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "seed": "tsx app/actions/seedActions.ts"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
-    "@hookform/resolvers": "^3.6.0",
+    "@hookform/resolvers": "^4.1.3",
     "@nextui-org/react": "^2.4.1",
     "@tanstack-query-firebase/react": "^1.0.6",
-    "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query": "^5.66.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "firebase": "^11.3.0",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
     "genkit": "^1.8.0",
-    "lucide-react": "^0.400.0",
-    "next": "15.0.0",
+    "lucide-react": "^0.475.0",
+    "next": "15.2.3",
     "patch-package": "^8.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.0",
-    "recharts": "^2.12.7",
-    "tailwind-merge": "^2.3.0",
-    "zod": "^3.23.8"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
+    "tailwind-merge": "^3.0.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.0.0",
     "genkit-cli": "^1.8.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.15.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5"
   }
 }
