My roll out still fails. See the error message below.
An error occurred in your rollout
spec.scaling.max_instances: Max instances must be set to 10 or fewer to set the requested memory and CPU. Consider running your workload in a region with greater capacity, or requesting an increase in quota for this region if you are seeing sustained usage near this limit

--- a/firebase.json
+++ b/firebase.json
@@ -7,20 +7,16 @@
     }
   },
   "hosting": {
-    "public": "out",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "run": {
-          "serviceId": "platform",
-          "region": "us-central1"
-        }
-      }
-    ]
+    "frameworksBackend": {
+      "region": "us-central1",
+      "maxInstances": 10,
+      "memory": "512MiB"
+    }
   }
 }
