--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,8 @@
+
 {
   "functions": {
     "source": ".",
-    "runtime": "nodejs20",
-    "runtimeOptions": {
-      "maxInstances": 10
-    }
+    "runtime": "nodejs20"
   },
   "hosting": {
     "source": ".",
