--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID="addressdata-sandbox"
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="addressdata-sandbox.firebasestorage.app"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="240322326999"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:240322326999:web:600f09adec29bfe1be5b92"
-# Add NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-XXXXXXXXXX" if you have one and it's needed.
+NEXT_PUBLIC_FIREBASE_GOOGLE_ANALYTICS=G-VMCMVCXX8S
+NEXT_PUBLIC_FACEBOOK_PIXEL=1234567890
