--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "address-data",
   "version": "1.0.0",
@@ -11,7 +12,8 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "seed:estates": "tsx scripts/seed-estates.ts"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
